--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "express": "^4.19.2",
     "moment": "^2.30.1",
     "mongoose": "^8.6.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
